--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^14.3.3",
     "@ngrx/store": "^14.3.3",
     "@ngrx/store-devtools": "^14.3.3",
+    "file-saver": "^2.0.5",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.5.1",
